# sleepwise

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  cache.py  config.py  evidence.py  explain.py  main.py  models.py  normalize.py  ratelimit.py  recommend.py  retrieval.py  safety.py
data/: evidence_corpus.json  interaction_rules.json  supplements.json
docs/: CASE_STUDY.md
evals/: __init__.py  metrics.py  run.py
evals/datasets/: retrieval_cases.json  safety_cases.json
static/: about.html  app.js  contact.html  index.html  medical-disclaimer.html  methodology.html  privacy.html  site.css  sources.html
tests/: conftest.py  test_api.py  test_cache.py  test_evals.py  test_explain.py  test_normalize.py  test_ratelimit.py  test_recommend.py  test_retrieval.py  test_safety.py
